# py-gc-objects-analyze

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  diagnostic_feedback.yml  docs_issue.yml  feature_request.yml  release_checklist.yml
.github/workflows/: benchmarks.yml  ci.yml  publish-python.yml  release-acceptance.yml  release.yml
benches/: import_benchmark.py  memory_benchmark.py  query_api_benchmark.py
crates/pygco-analysis/: Cargo.toml
crates/pygco-analysis/src/: lib.rs
crates/pygco-api/: Cargo.toml  build.rs
crates/pygco-api/examples/: openapi.rs
crates/pygco-api/src/: lib.rs
crates/pygco-api/tests/: http_contract.rs
crates/pygco-cli/: Cargo.toml
crates/pygco-cli/src/: cache_sessions.rs  main.rs
crates/pygco-cli/tests/: cli_contract.rs
crates/pygco-cli/tests/snapshots/: diff_1_2.json  objects_diff_before.json  objects_snapshot2.json  paths_snapshot2_referrers_101.json  subgraph_snapshot2_root100.json
crates/pygco-dump-format/: Cargo.toml
crates/pygco-dump-format/src/: lib.rs
crates/pygco-importer/: Cargo.toml
crates/pygco-importer/src/: lib.rs
crates/pygco-importer/tests/: golden_import.rs
crates/pygco-report/: Cargo.toml
crates/pygco-report/src/: lib.rs
crates/pygco-store/: Cargo.toml
crates/pygco-store/src/: lib.rs
docs/: README.md  analysis-model.md  api.md  architecture.md  cli-diagnostics-workbench.md  cli.md  compatibility.md  concepts.md  data-model.md  demo.md  dump-format.md  good-first-issues.md  install.md  known-limitations.md  maintenance.md  performance.md  poc-retrospective.md  producer-integration.md  quickstart.md  release-acceptance.md  release-provenance.md  runtime-safety.md  sqlite-schema.md  testing.md  triage.md  troubleshooting.md  versioning.md  web-ui-walkthrough.md  web-ui.md
docs/hats/: 2026-07-02-release-acceptance-v0.1.0-rc.3.md  2026-07-02-release-acceptance-v0.1.0.md
docs/project/: cli-diagnostics-technical-spec.md  engineering-standards.md  implementation-blueprint.md  poc-migration-guide.md  source-manifest.md  task.md
docs/references/: README.md
docs/specs/: 2026-07-01-cache-sessions-spec.md  2026-07-02-cli-leak-workflow-remediation-spec.md  2026-07-02-open-source-release-readiness-spec.md
fixtures/generators/: generate_golden.py  generate_synthetic.py
fixtures/golden/expected/: diff.json  objects.json  reachability.json  summary.json
python/pygco_dump/: README.md  pyproject.toml
python/pygco_dump/examples/: asgi_app.py  fastapi_app.py  write_file.py  wsgi_app.py
python/pygco_dump/pygco_dump/: __init__.py  core.py  fastapi.py
python/pygco_dump/tests/: test_core.py  test_fastapi.py
scripts/: capture_web_screenshots.sh  check_docs_commands.py  export_openapi.py  generate_cli_docs.py  install.sh  package_release.sh  release_preflight.sh  render_release_notes.py  test_install.sh
skills/pygco/: SKILL.md
skills/pygco/agents/: openai.yaml
web/app/: components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/app/scripts/: generate-api-client.mjs
web/app/src/: main.tsx  styles.css
web/app/src/app/: router.tsx
web/app/src/components/shared/: json.tsx  metric-card.tsx  page.tsx  stat-table.tsx  states.tsx
web/app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  sheet.tsx  table.tsx  textarea.tsx
web/app/src/hooks/: use-aggregate-deltas.ts
web/app/src/lib/: errors.ts  export.ts  format.ts  graph-filter.ts  search.ts  sql.ts  utils.ts
web/app/src/pages/: DiffPage.tsx  FindingsPage.tsx  OverviewPage.tsx  ReportPage.tsx
web/app/src/pages/aggregates/: AggregatePages.tsx  AggregateTitle.tsx
web/app/src/pages/graph/: GraphPage.tsx
web/app/src/pages/objects/: ObjectDetailSheet.tsx  ObjectsPage.tsx
web/app/src/pages/overview/: OverviewInsights.tsx
web/app/src/pages/sql/: SqlPage.tsx
web/app/tests/e2e/: graph-filter.spec.ts  pygco.spec.ts
