[workspace]
members = [
  "crates/pygco-analysis",
  "crates/pygco-api",
  "crates/pygco-cli",
  "crates/pygco-dump-format",
  "crates/pygco-importer",
  "crates/pygco-report",
  "crates/pygco-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivan-94/py-gc-objects-analyze"
homepage = "https://github.com/ivan-94/py-gc-objects-analyze"
documentation = "https://github.com/ivan-94/py-gc-objects-analyze/tree/main/docs"
description = "Local Python GC object memory forensics tooling"
readme = "README.md"
keywords = ["python", "gc", "memory", "forensics", "sqlite"]
categories = ["command-line-utilities", "development-tools::profiling"]

[workspace.dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
flate2 = "1.0.35"
http = "1.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
webbrowser = "1.0.3"
