[package]
name = "pygco-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pygco-store = { path = "../pygco-store" }

[dev-dependencies]
tempfile.workspace = true
