[package]
name = "pygco-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pygco-analysis = { path = "../pygco-analysis" }
pygco-report = { path = "../pygco-report" }
pygco-store = { path = "../pygco-store" }

[dev-dependencies]
pygco-importer = { path = "../pygco-importer" }
tempfile.workspace = true
tower.workspace = true
