[package]
name = "pygco-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "pygco"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webbrowser.workspace = true
pygco-analysis = { path = "../pygco-analysis" }
pygco-api = { path = "../pygco-api" }
pygco-importer = { path = "../pygco-importer" }
pygco-report = { path = "../pygco-report" }
pygco-store = { path = "../pygco-store" }

[dev-dependencies]
flate2.workspace = true
tempfile.workspace = true
