[package]
name = "pygco-importer"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
chrono.workspace = true
flate2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8.19"
pygco-analysis = { path = "../pygco-analysis" }
pygco-dump-format = { path = "../pygco-dump-format" }
pygco-store = { path = "../pygco-store" }

[dev-dependencies]
tempfile.workspace = true
