[package]
name = "pygco-report"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
rusqlite.workspace = true
serde_json.workspace = true
pygco-analysis = { path = "../pygco-analysis" }
